# task-manager

./: .gitignore  LICENSE  NEWS.md  README.md  TODO.md  pyproject.toml  todofile.code-workspace
.TODO.md.dir/: config.yaml  tasks.yaml
.claude/: launch.json
docs/: requirements.md  specifications.md  tasks.md  technical-design.md
examples/: TODO.md
examples/.TODO.md.dir/: config.yaml  tasks.yaml
src/task_manager/: cli.py  daemon.py  models.py  parser.py  server.py  store.py  writer.py
src/task_manager/static/: app.css  app.js  index.html
src/todofile/: cli.py  daemon.py  models.py  parser.py  server.py  store.py  writer.py
src/todofile/static/: agent.md  app.css  app.js  index.html
tests/: conftest.py  test_cli.py  test_config_cli.py  test_daemon.py  test_defaults.py  test_done_toggle.py  test_parser.py  test_reorder.py  test_server.py  test_status.py  test_store.py  test_writer.py
