[project]
name = "task-manager"
version = "0.1.0"
authors = [{name = "Duccio Aiazzi", email = "duccioa@users.noreply.github.com"}]
dependencies = [
    "rich-click>=1.9.7,<2",
    "starlette>=0.40,<1",
    "uvicorn>=0.30,<1",
    "pyyaml>=6,<7", "httpx>=0.28.1,<0.29",
]
requires-python = ">= 3.12"

[project.scripts]
tsk = "task_manager.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager"]

[tool.hatch.build.targets.wheel.force-include]
"src/task_manager/static" = "task_manager/static"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
task_manager = { path = ".", editable = true }

[tool.pixi.tasks]
tsk = { cmd = "tsk", description = "Run the tsk CLI" }

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.dev.tasks]
pytest = { cmd = "pytest", description = "Run tests" }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "dev" }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3,<10"
ipykernel = ">=7.2.0,<8"
