[project]
name = "todofile"
version = "0.1.0"
description = "Local-first task manager powered by your TODO.md"
authors = [{name = "Duccio Aiazzi", email = "duccioa@users.noreply.github.com"}]
dependencies = [
    "rich-click>=1.9.7,<2",
    "starlette>=0.40,<1",
    "uvicorn>=0.30,<1",
    "pyyaml>=6,<7", "httpx>=0.28.1,<0.29",
]
requires-python = ">= 3.12"
license-files = ["LICENSE"]

[project.scripts]
tsk = "todofile.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/todofile"]

[tool.hatch.build.targets.wheel.force-include]
"src/todofile/static" = "todofile/static"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
todofile = { path = ".", editable = true }

[tool.pixi.tasks]
tsk = { cmd = "tsk", description = "Run the tsk CLI" }

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.dev.tasks]
pytest = { cmd = "pytest", description = "Run tests" }

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "dev" }

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.3,<10"
ipykernel = ">=7.2.0,<8"
